upload/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':='", "'+'", 
                     "'*'", "'<>'", "'<='", "'>='", "'-'", "'/'", "'='", 
                     "'<'", "'>'", "'['", "']'", "':'", "'('", "')'", "';'", 
                     "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "TRA_BLOCK_COMMENT", 
                      "BLOCK_COMMENT", "BOOLEANLIT", "BREAK", "CONTINUE", 
                      "FOR", "TO", "DOWNTO", "DO", "IF", "THEN", "ELSE", 
                      "RETURN", "WHILE", "WITH", "BEGIN", "END", "FUNCTION", 
                      "PROCEDURE", "VAR", "TRUE", "FALSE", "ARRAY", "OF", 
                      "REALTYPE", "BOOLEANTYPE", "INTTYPE", "STRINGTYPE", 
                      "NOT", "AND", "OR", "DIV", "MOD", "ASSIGN", "ADD", 
                      "MUL", "NOTEQUAL", "LESSOREQUAL", "GREATEROREQUAL", 
                      "SUB", "DIVISION", "EQUAL", "LESS", "GREATER", "LSB", 
                      "RSB", "COLON", "LB", "RB", "SM", "DD", "CM", "INTLIT", 
                      "FLOATLIT", "ID", "WS", "UNCLOSE_STRING", "ERR", "STRINGLIT", 
                      "ESCAPE", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardel = 2
    RULE_var_decla = 3
    RULE_return_type = 4
    RULE_primitive_type = 5
    RULE_array_type = 6
    RULE_subscript = 7
    RULE_funcdel = 8
    RULE_compound_statement = 9
    RULE_statement = 10
    RULE_assignment_statement = 11
    RULE_lhs = 12
    RULE_if_statement = 13
    RULE_for_statement = 14
    RULE_while_statement = 15
    RULE_break_statement = 16
    RULE_continue_statement = 17
    RULE_return_statement = 18
    RULE_call_statement = 19
    RULE_with_statement = 20
    RULE_procedel = 21
    RULE_expression = 22
    RULE_expr1 = 23
    RULE_expr2 = 24
    RULE_expr3 = 25
    RULE_expr4 = 26
    RULE_expr5 = 27
    RULE_expr6 = 28
    RULE_funcall = 29
    RULE_literal = 30
    RULE_index_exp = 31

    ruleNames =  [ "program", "decl", "vardel", "var_decla", "return_type", 
                   "primitive_type", "array_type", "subscript", "funcdel", 
                   "compound_statement", "statement", "assignment_statement", 
                   "lhs", "if_statement", "for_statement", "while_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "call_statement", "with_statement", "procedel", "expression", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "funcall", "literal", "index_exp" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    TRA_BLOCK_COMMENT=2
    BLOCK_COMMENT=3
    BOOLEANLIT=4
    BREAK=5
    CONTINUE=6
    FOR=7
    TO=8
    DOWNTO=9
    DO=10
    IF=11
    THEN=12
    ELSE=13
    RETURN=14
    WHILE=15
    WITH=16
    BEGIN=17
    END=18
    FUNCTION=19
    PROCEDURE=20
    VAR=21
    TRUE=22
    FALSE=23
    ARRAY=24
    OF=25
    REALTYPE=26
    BOOLEANTYPE=27
    INTTYPE=28
    STRINGTYPE=29
    NOT=30
    AND=31
    OR=32
    DIV=33
    MOD=34
    ASSIGN=35
    ADD=36
    MUL=37
    NOTEQUAL=38
    LESSOREQUAL=39
    GREATEROREQUAL=40
    SUB=41
    DIVISION=42
    EQUAL=43
    LESS=44
    GREATER=45
    LSB=46
    RSB=47
    COLON=48
    LB=49
    RB=50
    SM=51
    DD=52
    CM=53
    INTLIT=54
    FLOATLIT=55
    ID=56
    WS=57
    UNCLOSE_STRING=58
    ERR=59
    STRINGLIT=60
    ESCAPE=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.decl()
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 69
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardel(self):
            return self.getTypedRuleContext(MPParser.VardelContext,0)


        def funcdel(self):
            return self.getTypedRuleContext(MPParser.FuncdelContext,0)


        def procedel(self):
            return self.getTypedRuleContext(MPParser.ProcedelContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.vardel()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.funcdel()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.procedel()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def var_decla(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declaContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declaContext,i)


        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SM)
            else:
                return self.getToken(MPParser.SM, i)

        def getRuleIndex(self):
            return MPParser.RULE_vardel

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardel" ):
                return visitor.visitVardel(self)
            else:
                return visitor.visitChildren(self)




    def vardel(self):

        localctx = MPParser.VardelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(MPParser.VAR)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.var_decla()
                self.state = 78
                self.match(MPParser.SM)
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def return_type(self):
            return self.getTypedRuleContext(MPParser.Return_typeContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_decla

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decla" ):
                return visitor.visitVar_decla(self)
            else:
                return visitor.visitChildren(self)




    def var_decla(self):

        localctx = MPParser.Var_declaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decla)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MPParser.ID)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.CM:
                self.state = 85
                self.match(MPParser.CM)
                self.state = 86
                self.match(MPParser.ID)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MPParser.COLON)
            self.state = 93
            self.return_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MPParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_return_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = MPParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_return_type)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REALTYPE, MPParser.BOOLEANTYPE, MPParser.INTTYPE, MPParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEANTYPE(self):
            return self.getToken(MPParser.BOOLEANTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REALTYPE) | (1 << MPParser.BOOLEANTYPE) | (1 << MPParser.INTTYPE) | (1 << MPParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def subscript(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.SubscriptContext)
            else:
                return self.getTypedRuleContext(MPParser.SubscriptContext,i)


        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MPParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MPParser.ARRAY)
            self.state = 102
            self.match(MPParser.LSB)
            self.state = 103
            self.subscript()
            self.state = 104
            self.match(MPParser.DD)
            self.state = 105
            self.subscript()
            self.state = 106
            self.match(MPParser.RSB)
            self.state = 107
            self.match(MPParser.OF)
            self.state = 108
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_subscript

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubscript" ):
                return visitor.visitSubscript(self)
            else:
                return visitor.visitChildren(self)




    def subscript(self):

        localctx = MPParser.SubscriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subscript)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 110
                self.match(MPParser.SUB)


            self.state = 113
            self.match(MPParser.INTLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def return_type(self):
            return self.getTypedRuleContext(MPParser.Return_typeContext,0)


        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SM)
            else:
                return self.getToken(MPParser.SM, i)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def var_decla(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declaContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declaContext,i)


        def vardel(self):
            return self.getTypedRuleContext(MPParser.VardelContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdel

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdel" ):
                return visitor.visitFuncdel(self)
            else:
                return visitor.visitChildren(self)




    def funcdel(self):

        localctx = MPParser.FuncdelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MPParser.FUNCTION)
            self.state = 116
            self.match(MPParser.ID)
            self.state = 117
            self.match(MPParser.LB)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 118
                self.var_decla()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SM:
                    self.state = 119
                    self.match(MPParser.SM)
                    self.state = 120
                    self.var_decla()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 128
            self.match(MPParser.RB)
            self.state = 129
            self.match(MPParser.COLON)
            self.state = 130
            self.return_type()
            self.state = 131
            self.match(MPParser.SM)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 132
                self.vardel()


            self.state = 135
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StatementContext)
            else:
                return self.getTypedRuleContext(MPParser.StatementContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_compound_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = MPParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compound_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(MPParser.BEGIN)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.FOR) | (1 << MPParser.IF) | (1 << MPParser.RETURN) | (1 << MPParser.WHILE) | (1 << MPParser.WITH) | (1 << MPParser.BEGIN) | (1 << MPParser.INTLIT) | (1 << MPParser.ID))) != 0):
                self.state = 138
                self.statement()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(MPParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_statement(self):
            return self.getTypedRuleContext(MPParser.Assignment_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MPParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MPParser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(MPParser.While_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MPParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MPParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MPParser.Return_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(MPParser.Call_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def with_statement(self):
            return self.getTypedRuleContext(MPParser.With_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.assignment_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.if_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.for_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.break_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.continue_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 152
                self.return_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 153
                self.call_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 154
                self.compound_statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 155
                self.with_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assignment_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def lhs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.LhsContext)
            else:
                return self.getTypedRuleContext(MPParser.LhsContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_assignment_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_statement" ):
                return visitor.visitAssignment_statement(self)
            else:
                return visitor.visitChildren(self)




    def assignment_statement(self):
